@@ -8,8 +8,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
@@ -17,20 +15,24 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import cz.tacr.elza.controller.vo.ArrFundVersionVO;
-import cz.tacr.elza.controller.vo.ArrStructureDataVO;
-import cz.tacr.elza.controller.vo.FilteredResultVO;
-import cz.tacr.elza.controller.vo.RulStructureTypeVO;
-import cz.tacr.elza.controller.vo.StructureExtensionFundVO;
 import cz.tacr.elza.controller.vo.nodes.RulDescItemTypeExtVO;
-import cz.tacr.elza.controller.vo.nodes.descitems.ArrItemIntVO;
-import cz.tacr.elza.controller.vo.nodes.descitems.ArrItemStringVO;
-import cz.tacr.elza.controller.vo.nodes.descitems.ArrItemVO;
-import cz.tacr.elza.domain.ArrStructuredObject;
 import cz.tacr.elza.repository.SobjVrequestRepository;
+import cz.tacr.elza.test.controller.vo.DataInteger;
+import cz.tacr.elza.test.controller.vo.DataString;
 import cz.tacr.elza.test.controller.vo.Fund;
+import cz.tacr.elza.test.controller.vo.SdoBatchUpdateParam;
+import cz.tacr.elza.test.controller.vo.SdoCopyObjectParam;
+import cz.tacr.elza.test.controller.vo.SdoExtensionFund;
+import cz.tacr.elza.test.controller.vo.SdoFindResult;
+import cz.tacr.elza.test.controller.vo.SdoItemResult;
+import cz.tacr.elza.test.controller.vo.SdoType;
+import cz.tacr.elza.test.controller.vo.StructuredObject;
+import cz.tacr.elza.test.controller.vo.StructuredObject.StateEnum;
+import cz.tacr.elza.test.controller.vo.StructuredObjectItem;
+import cz.tacr.elza.test.controller.vo.StructuredObjectItems;
 
 /**
- * Test pro {@link StructureController}.
+ * Test pro {@link StructureOldController} &&  {@link StructureController}.
  */
 public class StructureControllerTest extends AbstractControllerTest {
 
@@ -54,9 +56,9 @@ public class StructureControllerTest extends AbstractControllerTest {
         Fund fund = createFund(NAME_AS, CODE_AS);
         ArrFundVersionVO fundVersion = getOpenVersion(fund);
 
-        structureTypesAndExtensions(fundVersion);
-        structureDataTest(fundVersion);
-        structureItemTest(fundVersion);
+        structureTypesAndExtensions(fund);
+        structureDataTest(fundVersion, fund);
+        structureItemTest(fund);
 
         // wait to process whole queue
         while (sobjVrequestRepository.count() > 0) {
@@ -70,42 +72,43 @@ public class StructureControllerTest extends AbstractControllerTest {
     @Test
     public void structureBatchTest() {
         Fund fund = createFund(NAME_AS, CODE_AS);
-        ArrFundVersionVO fundVersion = getOpenVersion(fund);
 
-        ArrStructureDataVO structureData = createStructureData(fundVersion);
+        // create object
+        StructuredObject structureData = structureApi.sdoCreateObject(fund.getId(), STRUCTURE_TYPE_CODE, null);
 
         // vytvoření hodnot
-        createStructureItemPacketNumber(fundVersion, structureData);
-        createStructureItemPacketPrefix(fundVersion, structureData);
-        createStructureItemPacketPostfix(fundVersion, structureData);
-        createStructureItemPacketType(fundVersion, structureData);
+        createStructureItemPacketNumber(fund, structureData);
+        createStructureItemPacketPrefix(fund, structureData);
+        createStructureItemPacketPostfix(fund, structureData);
+        createStructureItemPacketType(fund, structureData);
 
         RulDescItemTypeExtVO typePostfix = findDescItemTypeByCode("SRD_PACKET_POSTFIX");
         RulDescItemTypeExtVO typeNumber = findDescItemTypeByCode("SRD_PACKET_NUMBER");
         List<Integer> itemTypeIds = Collections.singletonList(typeNumber.getId());
 
-        duplicateStructureDataBatch(fundVersion.getId(), structureData.getId(), BATCH_COUNT, itemTypeIds);
+        SdoCopyObjectParam copyObjectParam = new SdoCopyObjectParam();
+        copyObjectParam.setCount(BATCH_COUNT);
+        copyObjectParam.setIncrementedTypeIds(itemTypeIds);
 
-        FilteredResultVO<ArrStructureDataVO> structureDataResult = findStructureData(STRUCTURE_TYPE_CODE, fundVersion.getId(), null, null, null, null);
+        structureApi.sdoCopyObject(fund.getId(), structureData.getId(), copyObjectParam);
+
+        SdoFindResult structureDataResult = structureApi.sdoFindStructObj(fund.getId(), STRUCTURE_TYPE_CODE, null, null, null, null, null);
         assertEquals(BATCH_COUNT, structureDataResult.getCount());
         assertEquals(BATCH_COUNT, structureDataResult.getRows().size());
 
-        StructureController.StructureDataFormDataVO structureDataForm = getFormStructureItems(fundVersion.getId(),
-                                                                                              structureData.getId());
-
-        Map<Integer, List<ArrItemVO>> items = structureDataForm.getDescItems().stream().peek(it -> {
+        StructuredObjectItems structureDataForm = structureApi.sdoGetFormStructureItems(fund.getId(), structureData.getId(), null);
+        structureDataForm.getItems().forEach(it -> {
             if (it.getItemTypeId().equals(typeNumber.getId())) {
-                ((ArrItemIntVO) it).setValue(BATCH_COUNT + 1);
+                ((DataInteger) it.getData()).setIntegerValue(BATCH_COUNT + 1);
             }
-        }).collect(Collectors.groupingBy(ArrItemVO::getItemTypeId));
+        });
 
-        StructureController.StructureDataBatchUpdate data = new StructureController.StructureDataBatchUpdate();
-        data.setStructureDataIds(structureDataResult.getRows().stream().map(sd -> sd.getId())
-                .collect(Collectors.toList()));
+        SdoBatchUpdateParam data = new SdoBatchUpdateParam();
+        data.setIds(structureDataResult.getRows().stream().map(sd -> sd.getId()).collect(Collectors.toList()));
         data.setDeleteItemTypeIds(Collections.singletonList(typePostfix.getId()));
-        data.setItems(items);
+        data.setItems(structureDataForm.getItems());
         data.setAutoincrementItemTypeIds(Collections.singletonList(typeNumber.getId()));
-        updateStructureDataBatch(fundVersion.getId(), STRUCTURE_TYPE_CODE, data);
+        structureApi.sdoUpdateObjects(fund.getId(), STRUCTURE_TYPE_CODE, data);
 
         // wait to process whole queue
         while (sobjVrequestRepository.count() > 0) {
@@ -116,103 +119,81 @@ public class StructureControllerTest extends AbstractControllerTest {
         }
     }
 
-    private void structureItemTest(final ArrFundVersionVO fundVersion) {
-        ArrStructureDataVO structureData = createStructureData(fundVersion);
+    private void structureItemTest(final Fund fund) {
+        StructuredObject structureObject = structureApi.sdoCreateObject(fund.getId(), STRUCTURE_TYPE_CODE, null);
 
         // vytvoření hodnoty
-        RulDescItemTypeExtVO typeNumber = findDescItemTypeByCode("SRD_PACKET_NUMBER");
-        ArrItemVO itemNumber = buildDescItem(typeNumber.getCode(), null, NUMBER_VALUE_1, null, null, null);
-        StructureController.StructureItemResult siNumberCreated = createStructureItem(itemNumber, fundVersion.getId(),
-                                                                                      typeNumber.getId(),
-                                                                                      structureData.getId());
+        SdoItemResult siNumberCreated = createStructureItemPacketNumber(fund, structureObject);
+        StructuredObjectItem createdNumber = siNumberCreated.getItem();
 
         // aktualizace hodnoty
-        ArrItemIntVO itemIntNumber = (ArrItemIntVO) siNumberCreated.getItem();
-        itemIntNumber.setValue(NUMBER_VALUE_2);
-        StructureController.StructureItemResult structureItemUpdated = updateStructureItem(itemIntNumber, fundVersion.getId(), true);
-        ArrItemIntVO itemIntNumber2 = (ArrItemIntVO) structureItemUpdated.getItem();
-        assertEquals(NUMBER_VALUE_2, itemIntNumber2.getValue());
+        ((DataInteger) createdNumber.getData()).setIntegerValue(NUMBER_VALUE_2);
+        SdoItemResult siNumberUpdated = structureApi.sdoUpdateItem(fund.getId(), structureObject.getId(), true, createdNumber);
+        StructuredObjectItem updatedNumber = siNumberUpdated.getItem();
+        assertEquals(NUMBER_VALUE_2, ((DataInteger) updatedNumber.getData()).getIntegerValue());
 
         // vytvoření hodnoty
-        RulDescItemTypeExtVO typePrefix = findDescItemTypeByCode("SRD_PACKET_PREFIX");
-        ArrItemVO itemPrefix = buildDescItem(typePrefix.getCode(), null, PREFIX_VALUE, null, null, null);
-        StructureController.StructureItemResult siPrefixCreated = createStructureItem(itemPrefix, fundVersion.getId(),
-                                                                                      typePrefix.getId(),
-                                                                                      structureData.getId());
-        ArrItemStringVO itemStringPrefix = (ArrItemStringVO) siPrefixCreated.getItem();
-        assertEquals(PREFIX_VALUE, itemStringPrefix.getValue());
+        SdoItemResult siPrefixCreated = createStructureItemPacketPrefix(fund, structureObject);
+        StructuredObjectItem typePrefix = siPrefixCreated.getItem();
 
         // vytvoření hodnoty
-        RulDescItemTypeExtVO typePostfix = findDescItemTypeByCode("SRD_PACKET_POSTFIX");
-        ArrItemVO itemPostfix = buildDescItem(typePostfix.getCode(), null, POSTFIX_VALUE, null, null, null);
-        StructureController.StructureItemResult siPostfixCreated = createStructureItem(itemPostfix, fundVersion.getId(),
-                                                                                       typePostfix.getId(),
-                                                                                       structureData.getId());
-        ArrItemStringVO itemStringPostfix = (ArrItemStringVO) siPostfixCreated.getItem();
-        assertEquals(POSTFIX_VALUE, itemStringPostfix.getValue());
+        SdoItemResult siPostfixCreated = createStructureItemPacketPostfix(fund, structureObject);
+        StructuredObjectItem typePostfix = siPostfixCreated.getItem();
 
         // vytvoření hodnoty
+        SdoItemResult siPackedTypeCreated = createStructureItemPacketType(fund, structureObject);
+        StructuredObjectItem typePacketType = siPackedTypeCreated.getItem();
+
+        StructuredObjectItems structuteObjectItems = structureApi.sdoGetFormStructureItems(fund.getId(), structureObject.getId(), null);
+        assertEquals(5, structuteObjectItems.getItemTypes().size());
+
+        // smazání hodnoty
+        structureApi.sdoDeleteItem(fund.getId(), structureObject.getId(), updatedNumber.getItemObjectId());
+
+        structureApi.sdoDeleteItemsByType(fund.getId(), structureObject.getId(), typePrefix.getId());
+        structureApi.sdoDeleteItemsByType(fund.getId(), structureObject.getId(), typePostfix.getId());
+        structureApi.sdoDeleteItemsByType(fund.getId(), structureObject.getId(), typePacketType.getId());
+    }
+
+    // SRD_PACKET_NUMBER
+    private SdoItemResult createStructureItemPacketNumber(final Fund fund, final StructuredObject structureData) {
+    	RulDescItemTypeExtVO typeNumber = findDescItemTypeByCode("SRD_PACKET_NUMBER");
+        StructuredObjectItem itemNumber = buildStructuredObjectItem(typeNumber.getCode(), null, NUMBER_VALUE_1, null, null, null);
+        SdoItemResult createdNumber = structureApi.sdoCreateItem(fund.getId(), 
+        		                                                 structureData.getId(),
+      		                                                     itemNumber);
+        assertNotNull(createdNumber);
+    	assertEquals(NUMBER_VALUE_1, ((DataInteger) createdNumber.getItem().getData()).getIntegerValue());
+    	return createdNumber;
+    }
+
+    // SRD_PACKET_PREFIX
+    private SdoItemResult createStructureItemPacketPrefix(final Fund fund, final StructuredObject structureData) {
+    	RulDescItemTypeExtVO typePrefix = findDescItemTypeByCode("SRD_PACKET_PREFIX");
+    	StructuredObjectItem itemPrefix = buildStructuredObjectItem(typePrefix.getCode(), null, PREFIX_VALUE, null, null, null);
+    	SdoItemResult siPrefixCreated = structureApi.sdoCreateItem(fund.getId(),
+                                                                   structureData.getId(),
+                                                                   itemPrefix);
+    	assertEquals(PREFIX_VALUE, ((DataString) siPrefixCreated.getItem().getData()).getStringValue());
+    	return siPrefixCreated;
+    }
+
+    // SRD_PACKET_POSTFIX
+    private SdoItemResult createStructureItemPacketPostfix(final Fund fund, final StructuredObject structureData) {
+    	RulDescItemTypeExtVO typePostfix = findDescItemTypeByCode("SRD_PACKET_POSTFIX");
+    	StructuredObjectItem itemPostfix = buildStructuredObjectItem(typePostfix.getCode(), null, POSTFIX_VALUE, null, null, null);
+    	SdoItemResult siPostfixCreated = structureApi.sdoCreateItem(fund.getId(),
+                                                                    structureData.getId(),
+                                                                    itemPostfix);
+    	assertEquals(POSTFIX_VALUE, ((DataString) siPostfixCreated.getItem().getData()).getStringValue());
+    	return siPostfixCreated;
+    }
+
+    // SRD_PACKET_TYPE
+    private SdoItemResult createStructureItemPacketType(final Fund fund, final StructuredObject structureData) {
         RulDescItemTypeExtVO typePacketType = findDescItemTypeByCode("SRD_PACKET_TYPE");
-        ArrItemVO itemPacketType = buildDescItem(typePacketType.getCode(), "SRD_PACKET_TYPE_BOX", null, null, null, null);
-        StructureController.StructureItemResult siPacketTypeCreated = createStructureItem(itemPacketType,
-                                                                                          fundVersion.getId(),
-                                                                                          typePacketType.getId(),
-                                                                                          structureData.getId());
-
-        StructureController.StructureDataFormDataVO formStructureItems = getFormStructureItems(fundVersion.getId(),
-                                                                                               structureData.getId());
-
-        assertEquals(5, formStructureItems.getItemTypes().size());
-
-        StructureController.StructureItemResult deleteStructureItem = deleteStructureItem(itemIntNumber2, fundVersion.getId());
-        assertNotNull(deleteStructureItem);
-        assertNotNull(deleteStructureItem.getItem());
-
-        deleteStructureItemsByType(fundVersion.getId(), structureData.getId(), typePrefix.getId());
-        deleteStructureItemsByType(fundVersion.getId(), structureData.getId(), typePostfix.getId());
-        deleteStructureItemsByType(fundVersion.getId(), structureData.getId(), typePacketType.getId());
-
-        getFormStructureItems(fundVersion.getId(), structureData.getId());
-
-    }
-
-    private StructureController.StructureItemResult createStructureItemPacketType(final ArrFundVersionVO fundVersion, final ArrStructureDataVO structureData) {
-        RulDescItemTypeExtVO typePacketType = findDescItemTypeByCode("SRD_PACKET_TYPE");
-        ArrItemVO itemPacketType = buildDescItem(typePacketType.getCode(), "SRD_PACKET_TYPE_BOX", null, null, null, null);
-        return createStructureItem(itemPacketType, fundVersion.getId(), typePacketType.getId(), structureData.getId());
-    }
-
-    private StructureController.StructureItemResult createStructureItemPacketPostfix(final ArrFundVersionVO fundVersion, final ArrStructureDataVO structureData) {
-        RulDescItemTypeExtVO typePostfix = findDescItemTypeByCode("SRD_PACKET_POSTFIX");
-        ArrItemVO itemPostfix = buildDescItem(typePostfix.getCode(), null, POSTFIX_VALUE, null, null, null);
-        StructureController.StructureItemResult siPostfixCreated = createStructureItem(itemPostfix, fundVersion.getId(),
-                                                                                       typePostfix.getId(),
-                                                                                       structureData.getId());
-        ArrItemStringVO itemStringPostfix = (ArrItemStringVO) siPostfixCreated.getItem();
-        assertEquals(POSTFIX_VALUE, itemStringPostfix.getValue());
-        return siPostfixCreated;
-    }
-
-    private StructureController.StructureItemResult createStructureItemPacketPrefix(final ArrFundVersionVO fundVersion, final ArrStructureDataVO structureData) {
-        RulDescItemTypeExtVO typePrefix = findDescItemTypeByCode("SRD_PACKET_PREFIX");
-        ArrItemVO itemPrefix = buildDescItem(typePrefix.getCode(), null, PREFIX_VALUE, null, null, null);
-        StructureController.StructureItemResult siPrefixCreated = createStructureItem(itemPrefix, fundVersion.getId(),
-                                                                                      typePrefix.getId(),
-                                                                                      structureData.getId());
-        ArrItemStringVO itemStringPrefix = (ArrItemStringVO) siPrefixCreated.getItem();
-        assertEquals(PREFIX_VALUE, itemStringPrefix.getValue());
-        return siPrefixCreated;
-    }
-
-    private StructureController.StructureItemResult createStructureItemPacketNumber(final ArrFundVersionVO fundVersion, final ArrStructureDataVO structureData) {
-        RulDescItemTypeExtVO typeNumber = findDescItemTypeByCode("SRD_PACKET_NUMBER");
-        ArrItemVO itemNumber = buildDescItem(typeNumber.getCode(), null, NUMBER_VALUE_1, null, null, null);
-        StructureController.StructureItemResult structureItem = createStructureItem(itemNumber, fundVersion.getId(),
-                                                                                    typeNumber.getId(),
-                                                                                    structureData.getId());
-        ArrItemIntVO itemIntPrefix = (ArrItemIntVO) structureItem.getItem();
-        assertEquals(NUMBER_VALUE_1, itemIntPrefix.getValue());
-        return structureItem;
+        StructuredObjectItem itemPacketType = buildStructuredObjectItem(typePacketType.getCode(), "SRD_PACKET_TYPE_BOX", (Object) null, null, null, null);
+        return structureApi.sdoCreateItem(fund.getId(), structureData.getId(), itemPacketType);
     }
 
     /**
@@ -220,57 +201,59 @@ public class StructureControllerTest extends AbstractControllerTest {
      *
      * @param fundVersion
      */
-    private void structureTypesAndExtensions(final ArrFundVersionVO fundVersion) {
+    private void structureTypesAndExtensions(final Fund fund) {
         // find structure types
-        List<RulStructureTypeVO> structureTypes = findStructureTypes();
+        List<SdoType> structureTypes = structureApi.sdoFindStructureTypes(null);
         assertNotNull(structureTypes);
         assertEquals(11, structureTypes.size()); // SRD_PACKET, STAT_ZASTUPCE, SRD_*
 
         // check name and id
-        RulStructureTypeVO structureType = structureTypes.stream()
-                .filter(
-                        st -> st.getCode().equals(STRUCTURE_TYPE_CODE))
-                .findFirst().get();
+        SdoType structureType = structureTypes.stream()
+                .filter(st -> st.getCode().equals(STRUCTURE_TYPE_CODE))
+                .findFirst()
+                .get();
         assertEquals(STRUCTURE_TYPE_CODE, structureType.getCode());
         assertNotNull(structureType.getId());
         assertNotNull(structureType.getName());
 
         // check extensions
-        List<StructureExtensionFundVO> fundStructureExtension = findFundStructureExtension(fundVersion.getId(), STRUCTURE_TYPE_CODE);
+        List<SdoExtensionFund> fundStructureExtension = structureApi.sdoFindFundStructureExtension(fund.getId(), STRUCTURE_TYPE_CODE, null);
         assertNotNull(fundStructureExtension);
         assertEquals(1, fundStructureExtension.size());
 
-        StructureExtensionFundVO structureExtensionFund = fundStructureExtension.get(0);
+        SdoExtensionFund structureExtensionFund = fundStructureExtension.get(0);
         assertNotNull(structureExtensionFund.getId());
         assertNotNull(structureExtensionFund.getName());
         assertNotNull(structureExtensionFund.getCode());
         assertFalse(structureExtensionFund.getActive());
 
-        setFundStructureExtensions(fundVersion.getId(), STRUCTURE_TYPE_CODE, Collections.singletonList(STRUCTURE_EXTENSION_CODE));
-        fundStructureExtension = findFundStructureExtension(fundVersion.getId(), STRUCTURE_TYPE_CODE);
+        structureApi.sdoSetFundStructureExtensions(fund.getId(), STRUCTURE_TYPE_CODE, Collections.singletonList(STRUCTURE_EXTENSION_CODE));
+        fundStructureExtension = structureApi.sdoFindFundStructureExtension(fund.getId(), STRUCTURE_TYPE_CODE, null);
         structureExtensionFund = fundStructureExtension.get(0);
         assertTrue(structureExtensionFund.getActive());
 
-        setFundStructureExtensions(fundVersion.getId(), STRUCTURE_TYPE_CODE, Collections.emptyList());
-        fundStructureExtension = findFundStructureExtension(fundVersion.getId(), STRUCTURE_TYPE_CODE);
+        structureApi.sdoSetFundStructureExtensions(fund.getId(), STRUCTURE_TYPE_CODE, Collections.emptyList());
+        fundStructureExtension = structureApi.sdoFindFundStructureExtension(fund.getId(), STRUCTURE_TYPE_CODE, null);
         structureExtensionFund = fundStructureExtension.get(0);
         assertFalse(structureExtensionFund.getActive());
     }
 
-    private void structureDataTest(final ArrFundVersionVO fundVersion) {
+    private void structureDataTest(final ArrFundVersionVO fundVersion, final Fund fund) {
         // create data type
-        ArrStructureDataVO structureData = createStructureData(fundVersion);
-        assertNotNull(structureData);
-        assertNotNull(structureData.getId());
-        assertNotNull(structureData.getAssignable());
-        assertSame(structureData.getState(), ArrStructuredObject.State.TEMP);
+        StructuredObject structureObject = structureApi.sdoCreateObject(fund.getId(), STRUCTURE_TYPE_CODE, null);
+        assertNotNull(structureObject);
+        assertNotNull(structureObject.getId());
+        assertNotNull(structureObject.getAssignable());
+        assertSame(structureObject.getState(), StateEnum.TEMP);
 
         // add item
-        createStructureItemPacketNumber(fundVersion, structureData);
+        createStructureItemPacketNumber(fund, structureObject);
 
-        ArrStructureDataVO structureDataConfirmed = confirmStructureData(fundVersion.getId(), structureData.getId());
-        // check id of returned type
-        assertTrue(Objects.equals(structureDataConfirmed.getId(), structureDataConfirmed.getId()));
+        StructuredObject confirmedStructureObject = structureApi.sdoConfirm(fund.getId(), structureObject.getId());
+        // check returned object
+        assertEquals(structureObject.getId(), confirmedStructureObject.getId());
+        assertEquals(confirmedStructureObject.getState(), StateEnum.OK);
+        assertTrue(StringUtils.isEmpty(confirmedStructureObject.getErrorDescription()));
 
         // wait to process whole queue
         while (sobjVrequestRepository.count() > 0) {
@@ -279,35 +262,29 @@ public class StructureControllerTest extends AbstractControllerTest {
             } catch (InterruptedException e) {
             }
         }
-        ArrStructureDataVO structureDataGet = getStructureData(fundVersion.getId(), structureData.getId());
-        assertSame(structureDataGet.getState(), ArrStructuredObject.State.OK);
-        assertTrue(StringUtils.isNotEmpty(structureDataGet.getValue()));
-        assertTrue(StringUtils.isEmpty(structureDataConfirmed.getErrorDescription()));
+        structureObject = structureApi.sdoGetObject(fund.getId(), structureObject.getId(), null);
+        assertSame(structureObject.getState(), StateEnum.OK);
+        assertTrue(StringUtils.isNotEmpty(structureObject.getValue()));
 
-        FilteredResultVO<ArrStructureDataVO> structureDataResult1 = findStructureData(STRUCTURE_TYPE_CODE, fundVersion.getId(), null, null, null, null);
-        assertEquals(1, structureDataResult1.getCount());
-        assertEquals(1, structureDataResult1.getRows().size());
+        SdoFindResult findResult1 = structureApi.sdoFindStructObj(fund.getId(), STRUCTURE_TYPE_CODE, null, null, null, null, null);
+        assertEquals(1, findResult1.getCount());
+        assertEquals(1, findResult1.getRows().size());
 
-        setAssignableStructureData(fundVersion.getId(), false, Collections.singletonList(structureData.getId()));
+        structureApi.sdoSetDataAssignable(fund.getId(), false, Collections.singletonList(structureObject.getId()));
 
-        FilteredResultVO<ArrStructureDataVO> structureDataResult2 = findStructureData(STRUCTURE_TYPE_CODE, fundVersion.getId(), null, false, null, null);
-        assertEquals(1, structureDataResult2.getCount());
-        assertEquals(1, structureDataResult2.getRows().size());
+        SdoFindResult findResult2 = structureApi.sdoFindStructObj(fund.getId(), STRUCTURE_TYPE_CODE, null, false, null, null, null);
+        assertEquals(1, findResult2.getCount());
+        assertEquals(1, findResult2.getRows().size());
 
-        FilteredResultVO<ArrStructureDataVO> structureDataResult3 = findStructureData(STRUCTURE_TYPE_CODE, fundVersion.getId(), null, true, null, null);
-        assertEquals(0, structureDataResult3.getCount());
-        assertEquals(0, structureDataResult3.getRows().size());
+        SdoFindResult findResult3 = structureApi.sdoFindStructObj(fund.getId(), STRUCTURE_TYPE_CODE, null, true, null, null, null);
+        assertEquals(0, findResult3.getCount());
+        assertEquals(0, findResult3.getRows().size());
 
-        List<Integer> structureDataDeletedIds = deleteStructureData(fundVersion.getId(), Collections.singletonList(structureData.getId()));
-        assertNotNull(structureDataDeletedIds.size() == 1);
+        // delete
+        structureApi.sdoDeleteObjects(fund.getId(), List.of(structureObject.getId()), null);
 
-        FilteredResultVO<ArrStructureDataVO> structureDataResult4 = findStructureData(STRUCTURE_TYPE_CODE, fundVersion.getId(), null, null, null, null);
-        assertEquals(0, structureDataResult4.getCount());
-        assertEquals(0, structureDataResult4.getRows().size());
+        SdoFindResult findResult4 = structureApi.sdoFindStructObj(fund.getId(), STRUCTURE_TYPE_CODE, null, null, null, null, null);
+        assertEquals(0, findResult4.getCount());
+        assertEquals(0, findResult4.getRows().size());
     }
-
-    private ArrStructureDataVO createStructureData(final ArrFundVersionVO fundVersion) {
-        return createStructureData(STRUCTURE_TYPE_CODE, fundVersion.getId());
-    }
-
 }
